@@ -1968,12 +1968,8 @@ function evalExpressionData($expression, $replaceFunctionMacros) {
 		$evStr .= ' '.$value;
 	}
 
-	$result = null;
-
 	// execute expression
-	ob_start();
 	eval('$result = ('.trim($evStr).');');
-	ob_get_clean();
 
 	return $result;
 }
